--- a/package.json
+++ b/package.json
@@ -1,24 +1,27 @@
 {
-  "name": "triferd-test-bot",
+  "name": "fav-bot",
   "version": "1.0.0",
-  "description": "A first test for writing a discord bot.",
+  "description": "A discord bot for marking messages on a discord server and having all of the marked message collected in a designated channel.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/TriFerd/triferd-test-bot.git"
+    "url": "git+https://github.com/TriFerd/discord-fav-bot.git"
   },
   "author": "TriFerd",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/TriFerd/triferd-test-bot/issues"
+    "url": "https://github.com/TriFerd/discord-fav-bot/issues"
   },
-  "homepage": "https://github.com/TriFerd/triferd-test-bot#readme",
+  "homepage": "https://github.com/TriFerd/discord-fav-bot#readme",
   "dependencies": {
+    "@keyv/sqlite": "^2.0.2",
     "discord.js": "^12.0.2",
-    "lodash": "^4.17.15"
+    "keyv": "^4.0.0",
+    "lodash": "^4.17.15",
+    "typescript": "^3.8.3"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.24.0",
