--- a/config.json
+++ b/config.json
@@ -1,4 +1,7 @@
 {
     "prefix" : "!",
-    "token" : "<your bot token here>"
+    "token" : "<your-bot-token-here>",
+    "favReaction": "⭐",
+    "checkedReaction": "✅",
+    "dbPath": "sqlite://database.sqlite"
 }
